<resources>
    <string name="app_name">Adopy</string>
    <string name="facebook_app_id">368019567220655</string>
    <string name="fb_login_protocol_scheme">fb368019567220655</string>
    <string name="price">Price:</string>
    <string name="date">Date:</string>
    //start
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signup_now">Sign Up Now !</string>
    <string name="or">OR</string>
    <string name="pressSignIn">Already account? press to sign In! </string>
    <string name="resetPass">Reset Password </string>
    <string name="signUpMe">Got it! Sign me up NOW!</string>
    <string name="signUpEmailBTN">Press HERE to Sign Up now</string>
    <string name="forgotPass">Forgot your Password?</string>

    //enter
    <string name="signup">Sign Up</string>
    <string name="terms">Terms Of Service</string>
    <string name="login">Login</string>
    <string name="title_delete">Are you sure you want to delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_post">NEW POST</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="does_your_pet_is_immunized">is He/She Immunized?</string>
    <string name="what_is_her_his_age">What is her/his age?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="load_data">Retrieving Data..</string>
    <string name="canceled">Canceled entering..</string>
    <string name="error">Error have been occurred,sorry. Please try again later</string>
    <string name="failed">Sorry, The authentication have been failed.</string>
    <string name="blank">One or more details are blank.</string>
    <string name="success">You entered with Success</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="nick_name">Nick Name</string>
    <string name="age">Age</string>
    <string name="signup_press">Don\'t have an account?</string>
    <string name="back">Back</string>
    <string name="reset_password">Reset Password</string>
    <string name="added">The post has been added with Success</string>
    <string name="the_pet_s_name">The pet\'s name</string>
    <string name="location">Location</string>
    <string name="describe_your_pet_in_a_few_words">Describe your pet in a few words..</string>
    <string name="adopt_me_now_and_save_me_from_the_street">Adopt me now and save me from the street..</string>
    <string name="no_sad">NO :(</string>
    <string name="yes_happy">YES :)</string>
    <string name="no_happy">NO :)</string>
    <string name="yes_sad">YES :(</string>
    <string name="send_massage">SEND MASSAGE</string>
    <string name="write_here_your_massage">write here your massage..</string>
    <string name="enter_the_body_of_the_massage">Enter the body of the massage</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="removed">Removed successfully</string>
    <string name="group_name">Group name</string>
    <string name="new_group">New Group</string>
    <string name="removed_group">Group has been removed in success.</string>
</resources>
