<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:theme="@style/AlertTheme"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout

        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:id="@+id/title"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="30sp"
            android:text="SEND MASSAGE"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <AutoCompleteTextView

            android:hint="@string/enter_the_title"
            android:layout_marginBottom="10dp"
            android:id="@+id/text_title"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/back_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>



        <AutoCompleteTextView
            android:hint="@string/enter_the_body_of_the_massage"
            android:id="@+id/text_massage"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/back_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

    </LinearLayout>




    <LinearLayout
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/no_happy"
            android:layout_marginEnd="20dp"
            android:background="@drawable/buton_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp" />

        <Button
            android:id="@+id/btn_ok"
            android:text="@string/yes_sad"
            android:background="@drawable/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



</LinearLayout>