<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.UserDialog.AppCompat"
    android:layout_gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EnterPages.ResetPassword">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="324dp"
        android:layout_height="210dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"


        android:src="@drawable/foot" />




    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="20dp"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/back_text"
        android:textColorHint="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:textColor="@color/colorPrimary"
            android:textColorHint="#fff"
            android:id="@+id/reset_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/back_button"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button"
            android:text="@string/back"
            android:layout_marginEnd="20dp"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:layout_marginRight="20dp" />
        <Button
            android:id="@+id/reset_pass_button"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button"
            android:text="@string/reset_password"
            android:textColor="#ffff"
            android:textStyle="bold" />
    </LinearLayout>



</LinearLayout>